# ecommerce-django-rust-e-react-

./: .gitignore
backoffice_admin/: .env.integration  .gitignore  manage.py  pyproject.toml
backoffice_admin/apps/core/: services.py
backoffice_admin/apps/core/management/commands/: test_rust_connection.py
backoffice_admin/real_estate_admin/: asgi.py  settings.py  urls.py  wsgi.py
rust_backend/: Cargo.toml
rust_backend/src/: main.rs
